Fix bar to hyprland window alignment.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,8 +5,8 @@
 }
 
 window > box {
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: 7.5px;
+	margin-right: 7.5px;
 	margin-top: 5px;
     background: #000000;
     border: 2px solid #FFFFFF;
